Added: separate auth middleware

--- a/backend/master_backend_6hrs/1st_project_form/views/login.ejs
+++ b/backend/master_backend_6hrs/1st_project_form/views/login.ejs
@@ -9,9 +9,9 @@
   </head>
   <body>
     <main>
-      <form method="post">
-        <input type="text" placeholder="Enter name" name="name" />
-        <input type="text" placeholder="Enter email" name="email" />
+      <form method="post" action="/login">
+        <!-- <input type="text" placeholder="Enter name" name="name" />
+        <input type="text" placeholder="Enter email" name="email" /> -->
         <input type="submit" value="Login" />
       </form>
     </main>
