--- a/backend/master_backend_6hrs/1st_project_form/views/logout.ejs
+++ b/backend/master_backend_6hrs/1st_project_form/views/logout.ejs
@@ -7,6 +7,8 @@
     <title>Logout</title>
   </head>
   <body>
-    <button>Logout</button>
+    <form action="/logout">
+      <button>Logout</button>
+    </form>
   </body>
 </html>
